--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root">
-<<<<<<< HEAD
+ 
      
       <section id = "Welcome">
       <h1>CÓDIGO HERENCIA</h1>
@@ -43,13 +42,12 @@
 
          <button id="volver a cifrar">VOLVER A CIFRAR</button>
 
+      </section>
 
       </section>
 
-=======
-      <h1>Hola mundo!</h1>
->>>>>>> c96e77410a90bc7625a9ed930fc607c0eb7825fb
-    </div>
+
+  
     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
